disconnection bug fix