@@ -1,5 +1,7 @@
 package com.savadanko.client;
 
+// java --module-path lib --add-modules javafx.controls,javafx.fxml -cp target/Client-1.0-SNAPSHOT.jar com.savadanko.client.ClientApp
+
 import com.savadanko.client.network.PortScene;
 import javafx.application.Application;
 import javafx.stage.Stage;
